--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "axctl"
-version = "0.1.0"
+version = "0.1.1-alpha.0"
 authors = ["Will Glynn <will@willglynn.com>"]
 edition = "2018"
 repository = "https://github.com/trunnion/axctl/"
