--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,4 @@ toml = "0.5"
 tokio = { version = "0.2", features = ["blocking", "io-std", "tcp", "time", "rt-threaded"] }
 tokio-openssl = "0.4"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
-vapix = "0.1"
+vapix = { version = "0.1.1-alpha.0" }
